import { Tabs } from "expo-router";
import {
  Home,
  Target,
  Plus,
  ChartNoAxesCombined,
  UserRound,
} from "lucide-react-native";
import { useColors } from "@/components/ui";
...
